syntax = "proto3";

package NUgc.NSchema.NOnto;

// Next field: 11
message TFilmReview {
    string ReviewId = 1;
    string OType = 2;

    uint32 RatingActing = 5;
    uint32 RatingInterest = 6;
    uint32 RatingStory = 7;
    uint32 RatingOverall = 8;

    string ReviewOverall = 9;
    string ScenarioAnnotation = 10;
}
